@@ -120,6 +120,16 @@ CONFIG_UART_IRDA_2STOP=0
 CONFIG_UART_MODEM_2STOP=0
 
 #
+# C5471 Ethernet Driver settings
+CONFIG_C5471_NET_STATS=n
+ETHERNET_PHY_LU3X31T_T64=1
+ETHERNET_PHY_AC101L=2
+CONFIG_C5471_ETHERNET_PHY=ETHERNET_PHY_LU3X31T_T64
+CONFIG_NET_C5471_AUTONEGOTIATION=y
+CONFIG_NET_C5471_BASET100=n
+CONFIG_NET_C5471_BASET10=n
+
+#
 # General OS setup
 #
 # CONFIG_EXAMPLE - identifies the subdirectory in examples
@@ -366,14 +376,19 @@ CONFIG_EXAMPLES_NSH_DRIPADDR=(10<<24|0<<16|0<<8|1)
 CONFIG_EXAMPLES_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
 
 #
-# C5471 Ethernet Driver settings
-CONFIG_C5471_NET_STATS=n
-ETHERNET_PHY_LU3X31T_T64=1
-ETHERNET_PHY_AC101L=2
-CONFIG_C5471_ETHERNET_PHY=ETHERNET_PHY_LU3X31T_T64
-CONFIG_NET_C5471_AUTONEGOTIATION=y
-CONFIG_NET_C5471_BASET100=n
-CONFIG_NET_C5471_BASET10=n
+# Settings for examples/wget
+# CONFIG_EXAMPLE_WGET_HOSTNAME - The host that serves the file
+# CONFIG_EXAMPLE_WGET_FILENAME - The name of the file to get (with leading '/')
+# CONFIG_EXAMPLE_WGET_NOMAC - (May be defined to use software assigned MAC)
+# CONFIG_EXAMPLE_WGET_IPADDR - Target IP address
+# CONFIG_EXAMPLE_WGET_DRIPADDR - Default router IP addess
+# CONFIG_EXAMPLE_WGET_NETMASK - Network mask
+CONFIG_EXAMPLE_WGET_HOSTNAME="www.nuttx.org"
+CONFIG_EXAMPLE_WGET_FILENAME="/index.html"
+CONFIG_EXAMPLE_WGET_NOMAC=y
+CONFIG_EXAMPLE_WGET_IPADDR=(10L<<24|0L<<16|0L<<8|2L)
+CONFIG_EXAMPLE_WGET_DRIPADDR=(10L<<24|0L<<16|0L<<8|1L)
+CONFIG_EXAMPLE_WGET_NETMASK=(255L<<24|255L<<16|255L<<8|0L)
 
 #
 # Stack and heap information
