@@ -672,4 +672,6 @@
 	  (submitted by JPelletier).  The is the same fix that was needed for the
 	  eZ80 and fixed in 0.4.2.
 	* netutils: Added logic to support a simple wget() function
-	* examples/wget: Added a test for wget()
+	* examples/wget: Added a test for wget() (Not yet tested because of
+	  some current networking limitations).
+	* lib/strncasecmp: Fix cut'n'paste error in function name.
